--- a/.dvc/config
+++ b/.dvc/config
@@ -1,7 +1,9 @@
 [core]
     no_scm = True
     analytics = false
-    remote = myremote
+    remote = lab2
 ['remote "myremote"']
     url = gs://dvc-bucket-25
     credentialpath = /home/ramin/Documents/MLOps/Labs/Data_Labs/DVC_Labs/Lab_1/git-action-gcp-3e47dbac54ff.json
+['remote "lab2"']
+    url = gs://dvc-lab-pranathi
