--- a/.dvc/config
+++ b/.dvc/config
@@ -7,3 +7,4 @@
     credentialpath = /home/ramin/Documents/MLOps/Labs/Data_Labs/DVC_Labs/Lab_1/git-action-gcp-3e47dbac54ff.json
 ['remote "lab2"']
     url = gs://dvc-lab-pranathi
+    credentialpath = /Users/pranathibombay/Downloads/lab2-key.json
